--- a/protegon.vcxproj.filters
+++ b/protegon.vcxproj.filters
@@ -226,4 +226,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Todo.txt" />
+  </ItemGroup>
 </Project>
