--- a/protegon.vcxproj.filters
+++ b/protegon.vcxproj.filters
@@ -247,6 +247,9 @@
     <ClInclude Include="src\StateMachine\States\GroundedState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\StateMachine\States\JumpState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -280,6 +283,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\StateMachine\States\GroundedState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\StateMachine\States\JumpState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
