--- a/protegon.vcxproj.filters
+++ b/protegon.vcxproj.filters
@@ -250,6 +250,9 @@
     <ClInclude Include="src\StateMachine\States\JumpState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Serialization.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
