Add temporary transition from idle state

--- a/protegon.vcxproj.filters
+++ b/protegon.vcxproj.filters
@@ -288,6 +288,9 @@
     <ClCompile Include="src\StateMachine\States\JumpState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\StateMachine\States\IdleState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Todo.txt" />
