--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -177,8 +177,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ECS\ComponentDeclarations.h" />
-    <ClInclude Include="src\ECS\Components\ComponentCommon.h" />
-    <ClInclude Include="src\ECS\Systems\SystemCommon.h" />
+    <ClInclude Include="src\ECS\Systems\AnimationSystem.h" />
+    <ClInclude Include="src\ECS\Systems\CollisionSystem.h" />
+    <ClInclude Include="src\ECS\Systems\DragSystem.h" />
+    <ClInclude Include="src\ECS\Systems\GravitySystem.h" />
+    <ClInclude Include="src\ECS\Systems\InputSystem.h" />
+    <ClInclude Include="src\ECS\Systems\LifetimeSystem.h" />
+    <ClInclude Include="src\ECS\Systems\MotionSystem.h" />
+    <ClInclude Include="src\ECS\Systems\MovementSystem.h" />
+    <ClInclude Include="src\ECS\Systems\RenderSystem.h" />
+    <ClInclude Include="src\ECS\Systems\StateMachineSystem.h" />
     <ClInclude Include="src\Serialization.h" />
     <ClInclude Include="src\StateMachine\States\JumpState.h" />
     <ClInclude Include="src\StateMachine\States\GroundedState.h" />
