--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="src\ECS\Systems\MovementSystem.h" />
     <ClInclude Include="src\ECS\Systems\RenderSystem.h" />
     <ClInclude Include="src\ECS\Systems\StateMachineSystem.h" />
+    <ClInclude Include="src\ECS\Systems\SystemCommon.h" />
     <ClInclude Include="src\Serialization.h" />
     <ClInclude Include="src\StateMachine\States\JumpState.h" />
     <ClInclude Include="src\StateMachine\States\GroundedState.h" />
@@ -203,7 +204,7 @@
     <ClInclude Include="src\ECS\Components\PlayerController.h" />
     <ClInclude Include="src\ECS\Components\SpriteSheetComponent.h" />
     <ClInclude Include="src\ECS\Components\StateMachineComponent.h" />
-    <ClInclude Include="src\ECS\EntityHandle.h" />
+    <ClInclude Include="src\ECS\Entity.h" />
     <ClInclude Include="src\ECS\Systems\BaseSystem.h" />
     <ClInclude Include="src\ECS\Components\Component.h" />
     <ClInclude Include="src\ECS\Components.h" />
