Add directional animations

--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -176,6 +176,7 @@
     <Image Include="resources\textures\player_anim2.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Direction.h" />
     <ClInclude Include="src\ECS\Systems\DirectionSystem.h" />
     <ClInclude Include="src\ECS\Components\DirectionComponent.h" />
     <ClInclude Include="src\ECS\Systems\AnimationSystem.h" />
@@ -245,6 +246,7 @@
     <ClInclude Include="src\Vec2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\ECS\Components\SpriteSheetComponent.cpp" />
     <ClCompile Include="src\ECS\Systems\DirectionSystem.cpp" />
     <ClCompile Include="src\ECS\Components\MotionComponent.cpp" />
     <ClCompile Include="src\ECS\Systems\AnimationSystem.cpp" />
