--- a/protegon.vcxproj.filters
+++ b/protegon.vcxproj.filters
@@ -351,6 +351,9 @@
     <ClCompile Include="src\ECS\Components\SpriteSheetComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ECS\Entity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Todo.txt" />
