Move RectFromVec function to Utilities

--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -256,6 +256,7 @@
     <ClCompile Include="src\InputHandler.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\TextureManager.cpp" />
+    <ClCompile Include="src\Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Todo.txt" />
