--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -176,21 +176,22 @@
     <Image Include="resources\textures\player_anim2.png" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Direction.h" />
     <ClInclude Include="src\ECS\Systems\DirectionSystem.h" />
+    <ClInclude Include="src\ECS\Systems\PhysicsSystem.h" />
+    <ClInclude Include="src\RigidBody.h" />
+    <ClInclude Include="src\Circle.h" />
+    <ClInclude Include="src\Direction.h" />
+    <ClInclude Include="src\ECS\Components\RigidBodyComponent.h" />
     <ClInclude Include="src\ECS\Components\DirectionComponent.h" />
     <ClInclude Include="src\ECS\Systems\AnimationSystem.h" />
     <ClInclude Include="src\ECS\Systems\CollisionSystem.h" />
-    <ClInclude Include="src\ECS\Systems\DragSystem.h" />
-    <ClInclude Include="src\ECS\Systems\GravitySystem.h" />
     <ClInclude Include="src\ECS\Systems\InputSystem.h" />
     <ClInclude Include="src\ECS\Systems\LifetimeSystem.h" />
-    <ClInclude Include="src\ECS\Systems\MotionSystem.h" />
-    <ClInclude Include="src\ECS\Systems\MovementSystem.h" />
     <ClInclude Include="src\ECS\Systems\RenderSystem.h" />
     <ClInclude Include="src\ECS\Systems\StateMachineSystem.h" />
     <ClInclude Include="src\ECS\Systems\SystemCommon.h" />
     <ClInclude Include="src\Serialization.h" />
+    <ClInclude Include="src\Shape.h" />
     <ClInclude Include="src\StateMachine\States\JumpState.h" />
     <ClInclude Include="src\StateMachine\States\GroundedState.h" />
     <ClInclude Include="src\ECS\Components\CollisionComponent.h" />
@@ -200,7 +201,6 @@
     <ClInclude Include="src\Defines.h" />
     <ClInclude Include="src\ECS\Components\AnimationComponent.h" />
     <ClInclude Include="src\ECS\Components\BaseComponent.h" />
-    <ClInclude Include="src\ECS\Components\DragComponent.h" />
     <ClInclude Include="src\ECS\Components\InputComponent.h" />
     <ClInclude Include="src\ECS\Components\PlayerController.h" />
     <ClInclude Include="src\ECS\Components\SpriteSheetComponent.h" />
@@ -214,14 +214,11 @@
     <ClInclude Include="src\ECS\CollisionComponent.h" />
     <ClInclude Include="src\ECS\DirectionComponent.h" />
     <ClInclude Include="src\ECS\DrawComponent.h" />
-    <ClInclude Include="src\ECS\Components\GravityComponent.h" />
     <ClInclude Include="src\ECS\Components\LifetimeComponent.h" />
     <ClInclude Include="src\ECS\Manager.h" />
     <ClInclude Include="src\ECS\HitboxComponent.h" />
     <ClInclude Include="src\ECS\KeyboardComponent.h" />
-    <ClInclude Include="src\ECS\Components\MotionComponent.h" />
     <ClInclude Include="src\ECS\Components\RenderComponent.h" />
-    <ClInclude Include="src\ECS\Components\SizeComponent.h" />
     <ClInclude Include="src\ECS\Components\SpriteComponent.h" />
     <ClInclude Include="src\ECS\Systems\System.h" />
     <ClInclude Include="src\ECS\Systems.h" />
@@ -238,7 +235,7 @@
     <ClInclude Include="src\StateMachine\States\IdleState.h" />
     <ClInclude Include="src\StateMachine\States\RunState.h" />
     <ClInclude Include="src\StateMachine\States\State.h" />
-    <ClInclude Include="src\StateMachine\States\StateCommon.h" />
+    <ClInclude Include="src\StateMachine\States\StateDefines.h" />
     <ClInclude Include="src\StateMachine\States\WalkState.h" />
     <ClInclude Include="src\StateMachine\Types.h" />
     <ClInclude Include="src\TextureManager.h" />
@@ -246,9 +243,9 @@
     <ClInclude Include="src\Vec2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\RigidBody.cpp" />
     <ClCompile Include="src\ECS\Components\SpriteSheetComponent.cpp" />
     <ClCompile Include="src\ECS\Entity.cpp" />
-    <ClCompile Include="src\ECS\Components\MotionComponent.cpp" />
     <ClCompile Include="src\StateMachine\StateMachines.cpp" />
     <ClCompile Include="src\AllocationMetrics.cpp" />
     <ClCompile Include="src\ECS\Manager.cpp" />
